Adding tests for homeComponent

--- a/src/app/components/homes/homes.component.html
+++ b/src/app/components/homes/homes.component.html
@@ -1,1 +1,5 @@
-<p>homes works!</p>
+<div data-test="home" *ngFor="let home of homes$ | async">
+  <div data-test="title">{{ home.title }}</div>
+  <div data-test="location">{{ home.location }}</div>
+  <div data-test="image">{{ home.image }}</div>
+</div>
