Book button added with unit test

--- a/src/app/components/homes/homes.component.html
+++ b/src/app/components/homes/homes.component.html
@@ -15,6 +15,7 @@
               home.location
             }}</small>
           </p>
+          <button data-test="book-btn" class="btn btn-primary">Book</button>
         </div>
       </div>
     </div>
