Add unit test for book component by injecting MAT_DIALOG in spec file

--- a/src/app/components/homes/homes.component.html
+++ b/src/app/components/homes/homes.component.html
@@ -16,7 +16,7 @@
             }}</small>
           </p>
           <button
-            (click)="openDialog()"
+            (click)="openDialog(home)"
             data-test="book-btn"
             class="btn btn-primary"
           >
